Changelog for plone.app.portlets

    (name of developer listed in brackets)


plone.app.portlets UNRELEASED

    - Make the language portlet handle languages without a native name
      correctly.
      [wichert]

    - Do not link to news_listing from the news portlet: that template has
      been removed from Plone. This fixes
      http://dev.plone.org/plone/ticket/7872
      [wichert]


plone.app.portlets 1.0.6

    - Sort the languages in the language portlet using their native name.
      [wichert]

    - Fixed None value in query_string in calendar portlet. This closes
      http://dev.plone.org/plone/ticket/7331.
      [hannosch]

    - Fixed logic error in getRootPath in the last change.
      [hannosch]

    - Only show the language portlet if more than one language is available.
      This brings it in sync with the language selection viewlet.
      [wichert]

    - Fix missing variable on the language portlet renderer. This fixes
      NuPlone which relies on the language selector portlet.
      [wichert]

    - Fixed undefined variable name introduced in the last change.
      [hannosch]

    - Correct getRootPath to not add a trailing / to paths if there
      are no context subelements. This was breaking webcouturier.dropdownmenu
      in situations where one of the sections was a navigation root.
      [wichert]

plone.app.portlets 1.0.5

    - Made absolute_url() work properly on the custom adding views. This is
      necessary for the <base /> URL to be set correctly.
      [optilude]

    - Handle RSS feed entries which do not have an update timestamp correctly.
      This fixes http://dev.plone.org/plone/ticket/7515
      [wichert]

    - Provide proper 'id' implementations for assignment mappings and 
      assignments. This makes absolute_url() work properly.
      [optilude]

plone.app.portlets 1.0.2

    - Always try to refresh the RSS feed when rendering it instead of waiting